force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__AllPackageProductsShown__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AllPackageProductsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether all package products are printed on quote documents or only ones that are non-zero.</description>
        <inlineHelpText>Select the checkbox if all package products should be printed on quote documents; otherwise, only ones that are non-zero are printed.</inlineHelpText>
        <label>Show All Package Product</label>
        <type>Checkbox</type>
    </CustomField>