force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__BottomMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Bottom margin on the page.</description>
        <inlineHelpText>Bottom margin on the page.</inlineHelpText>
        <label>Bottom Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>