force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__BundledProductsShown__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BundledProductsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if quote line items with the Bundled checkbox selected are displayed on quote documents generated from this template.</description>
        <inlineHelpText>Select the checkbox if quote line items with Bundled enabled are displayed on quote documents generated from this template.</inlineHelpText>
        <label>Show Bundled Products</label>
        <type>Checkbox</type>
    </CustomField>