force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyCity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyCity__c</fullName>
        <description>City portion of company address displayed on quote documents.</description>
        <inlineHelpText>City portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company City</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>