force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyCountry__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyCountry__c</fullName>
        <description>Country portion of company address displayed on quote documents.</description>
        <inlineHelpText>Country portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Country</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>