force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyEmail__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyEmail__c</fullName>
        <description>Company email displayed on quote documents. Eg: sales@mycompany.com</description>
        <inlineHelpText>Company email displayed on quote documents. Eg: sales@mycompany.com</inlineHelpText>
        <label>Company Email</label>
        <type>Email</type>
    </CustomField>