force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyFax__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyFax__c</fullName>
        <description>Company FAX displayed on quote documents.</description>
        <inlineHelpText>Company FAX displayed on quote documents.</inlineHelpText>
        <label>Company Fax</label>
        <type>Phone</type>
    </CustomField>