force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyName__c</fullName>
        <description>Name of the company as displayed on quote documents.</description>
        <inlineHelpText>Name of the company as displayed on quote documents.</inlineHelpText>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>