force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyPhone__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyPhone__c</fullName>
        <description>Company phone displayed on quote documents.</description>
        <inlineHelpText>Company phone displayed on quote documents.</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </CustomField>