force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyPostalCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyPostalCode__c</fullName>
        <description>Postal code portion of company address displayed on quote documents.</description>
        <inlineHelpText>Postal code portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>