force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanySlogan__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanySlogan__c</fullName>
        <description>Company slogan displayed on quote documents.</description>
        <inlineHelpText>Company slogan displayed on quote documents.</inlineHelpText>
        <label>Company Slogan</label>
        <length>120</length>
        <type>Text</type>
    </CustomField>