force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyState__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyState__c</fullName>
        <description>State portion of company address displayed on quote documents.</description>
        <inlineHelpText>State portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company State</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>