force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CompanyStreet__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CompanyStreet__c</fullName>
        <description>Street portion of company address displayed on quote documents.</description>
        <inlineHelpText>Street portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Street</label>
        <length>120</length>
        <type>Text</type>
    </CustomField>