force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__ComponentProductsHidden__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ComponentProductsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether component products are printed on quote documents, as indicated by the Component checkbox on the product</description>
        <inlineHelpText>Select the checkbox if component products with the Component enabled should not be printed on quote documents.</inlineHelpText>
        <label>Hide Component Products</label>
        <type>Checkbox</type>
    </CustomField>