force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__CustomerDiscountField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CustomerDiscountField__c</fullName>
        <description>Field on the Quote object that computes the customer discount.</description>
        <inlineHelpText>Field on the Quote object that computes the customer discount.</inlineHelpText>
        <label>Customer Discount Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Discount (Amt)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>