force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__Default__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that marks the template as default, when selected.</description>
        <inlineHelpText>Select this checkbox to mark this template as default.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </CustomField>