force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__DeploymentStatus__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DeploymentStatus__c</fullName>
        <description>Deployment status of this template. &quot;In Development&quot; templates are only visible to users with Customize Application permission.</description>
        <inlineHelpText>Deployment status of this template. Change to &quot;Deployed&quot; to make this template visible to non-admin users.</inlineHelpText>
        <label>Deployment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                    <default>true</default>
                    <label>In Development</label>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>