force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__DiscountScheduleShown__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountScheduleShown__c</fullName>
        <description>Determines if product discount schedule is displayed under the quote-lines.</description>
        <inlineHelpText>Choose how to display discount schedules on the quote document. Per Quote Line will show the discount schedule and Tiers right-aligned under each Quote Line.</inlineHelpText>
        <label>Show Discount Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Quote Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>