force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__ExcludedPages__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExcludedPages__c</fullName>
        <description>Excludes page numbering for All Pages, First Page, Second Page, and/or both the First and Second Page.</description>
        <inlineHelpText>Excludes page numbering for All Pages, First Page, Second Page, and/or both the First and Second Page.</inlineHelpText>
        <label>Exclude Page Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Pages</fullName>
                </value>
                <value>
                    <fullName>First Page</fullName>
                </value>
                <value>
                    <fullName>Last Page</fullName>
                </value>
                <value>
                    <fullName>First and Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>