force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__ExcludeHeaderFooter__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExcludeHeaderFooter__c</fullName>
        <description>Excludes template header and footer for First Page, Last Page, or both the First and Last Page.</description>
        <inlineHelpText>Excludes template header and footer for First Page, Last Page, or both the First and Last Page.</inlineHelpText>
        <label>Exclude Header &amp; Footer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Page</fullName>
                </value>
                <value>
                    <fullName>Last Page</fullName>
                </value>
                <value>
                    <fullName>First and Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>