force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__FontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FontSize__c</fullName>
        <defaultValue>9</defaultValue>
        <description>Default font size for text in this quote document.</description>
        <inlineHelpText>Default font size for text in this quote document.</inlineHelpText>
        <label>Font Size</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </CustomField>