force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__FooterContent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FooterContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template content that should be rendered in the footer.</description>
        <inlineHelpText>Template content that should be rendered in the footer.</inlineHelpText>
        <label>Footer Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Templates (Footer)</relationshipLabel>
        <relationshipName>QuoteTemplatesFooter</relationshipName>
        <type>Lookup</type>
    </CustomField>