force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__FooterHeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FooterHeight__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Height of the footer on documents generated from this template.</description>
        <inlineHelpText>Height of the footer on documents generated from this template.</inlineHelpText>
        <label>Footer Height</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>