force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GeneratorName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GeneratorName__c</fullName>
        <description>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</description>
        <inlineHelpText>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</inlineHelpText>
        <label>Generator Name</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>