force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GroupField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupField__c</fullName>
        <description>Contains the values you want to use when grouping and subtotaling line items.</description>
        <inlineHelpText>Select the field that has the values you want to use when grouping and subtotaling line items.</inlineHelpText>
        <label>Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>ProdType__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>