force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GroupFontStyle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupFontStyle__c</fullName>
        <description>Font style for Group titles. Default is normal if left blank.</description>
        <inlineHelpText>Font style for Group titles. Default is normal if left blank.</inlineHelpText>
        <label>Group Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Italic</fullName>
                </value>
                <value>
                    <fullName>Underline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>