force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GroupGap__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupGap__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Gap between groups in pixels.</description>
        <inlineHelpText>Gap between groups in pixels.</inlineHelpText>
        <label>Group Gap (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>