force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GroupTextAlignment__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupTextAlignment__c</fullName>
        <description>Specifies the alignment of Group title and Group Description. Defaults to Left if left blank.</description>
        <inlineHelpText>Specifies the alignment of Group title and Group Description. Defaults to Left if left blank.</inlineHelpText>
        <label>Group Text Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>