force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__GroupTextColor__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__GroupTextColor__c</fullName>
        <defaultValue>&apos;000000&apos;</defaultValue>
        <description>Color for the group title and description text.</description>
        <inlineHelpText>Color for the group title and description text.</inlineHelpText>
        <label>Group Text Color</label>
        <length>6</length>
        <type>Text</type>
    </CustomField>