force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__HeaderContent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References template content that should be rendered in the header.</description>
        <inlineHelpText>References template content that should be rendered in the header.</inlineHelpText>
        <label>Header Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Templates (Header)</relationshipLabel>
        <relationshipName>QuoteTemplatesHeader</relationshipName>
        <type>Lookup</type>
    </CustomField>