force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__HeaderHeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HeaderHeight__c</fullName>
        <description>Height of the header on documents generated from this template.</description>
        <inlineHelpText>Height of the header on documents generated from this template.</inlineHelpText>
        <label>Header Height</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>