force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__HideGroupSubtotals__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__HideGroupSubtotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides group subtotals on documents generated from this template.</description>
        <inlineHelpText>Select the checkbox if you want to hide group subtotals on documents generated from this template.</inlineHelpText>
        <label>Hide Group Subtotals</label>
        <type>Checkbox</type>
    </CustomField>