force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__IntroductionTitle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IntroductionTitle__c</fullName>
        <description>Title of the section displayed on the Introduction field.</description>
        <inlineHelpText>Title of the section displayed on the Introduction field. To display no title, leave this field blank.</inlineHelpText>
        <label>Introduction Title</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>