force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__LeftMargin__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LeftMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Left margin on the page.</description>
        <inlineHelpText>Left margin on the page.</inlineHelpText>
        <label>Left Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>