force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__LineNumbering__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LineNumbering__c</fullName>
        <description>Specifies how line items are numbered on generated document.</description>
        <inlineHelpText>Specify how to number line items on generated documents. &quot;Start at quote&quot; numbers all lines sequentially across groups (if any). &quot;Start at group&quot; resets numbers within each group.</inlineHelpText>
        <label>Line Numbering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start at quote</fullName>
                    <default>true</default>
                    <label>Start at quote</label>
                </value>
                <value>
                    <fullName>Start at group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>