force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__LineSortField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LineSortField__c</fullName>
        <description>Field on Quote Line used to sort line items on document generated by this template.</description>
        <inlineHelpText>Specify the field used in sorting line items on the document.</inlineHelpText>
        <label>Line Sort Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>