force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__LogoDocumentId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LogoDocumentId__c</fullName>
        <description>ID of the Document which conatins logo image for use in quote PDF.</description>
        <inlineHelpText>Salesforce ID for the document containing the logo image used in the quote PDF.</inlineHelpText>
        <label>Logo Document Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>