force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__NotesTitle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NotesTitle__c</fullName>
        <description>Title of the section that displays the Notes field.</description>
        <inlineHelpText>Title of the section that displays the Notes field. To display no title, leave this field blank.</inlineHelpText>
        <label>Notes Title</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>