force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PageHeight__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageHeight__c</fullName>
        <defaultValue>11</defaultValue>
        <description>Page height in inches.</description>
        <inlineHelpText>Page height in inches.</inlineHelpText>
        <label>Page Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>