force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PageNumberAlignment__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageNumberAlignment__c</fullName>
        <description>Specifies the page number alignment for the document.</description>
        <inlineHelpText>Specify the page number alignment for the document. Defaults to Center if the field is blank.</inlineHelpText>
        <label>Page Number Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>