force-app/main/default/objects/SBQQ__QuoteTemplate__c/fields/SBQQ__PageNumberText__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageNumberText__c</fullName>
        <defaultValue>&quot;Page {0} of {1}&quot;</defaultValue>
        <description>Declares the text description of the page number.</description>
        <inlineHelpText>Declare the text description of the page number. &quot;{0}&quot; independently represents the current page. &quot;{1}&quot; is dependent of &quot;{0}&quot; and it represents the total pages with page numbers. Defaults to &quot;Page {0} of {1}&quot; if the field is blank.</inlineHelpText>
        <label>Page Number Text</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>